--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "electron-debug": "^4.1.0",
+    "jsbarcode": "^3.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "electron-vite": "^3.1.0",
@@ -38,7 +39,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
-    "vite-plugin-electron-renderer": "^0.14.5"
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "main": "dist-electron/main.js"
 }
